# userpath

./: .appveyor.yml  .codecov.yml  .coveragerc  .gitignore  .travis.yml  HISTORY.rst  LICENSE-MIT  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: build.yml  test.yml
adduserpath.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_ash.py  test_bash.py  test_core.py  test_fish.py  test_sh.py  test_windows.py  test_xonsh.py  test_zsh.py  utils.py
tests/coverage/: .gitignore
tests/docker/: debian  docker-compose.yaml  requirements-dev.txt  requirements.txt
userpath/: __init__.py  __main__.py  cli.py  core.py  interface.py  shells.py  utils.py
