[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "userpath"
description = 'Cross-platform tool for adding locations to the user PATH'
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
keywords = [
  "path",
  "user path",
]
authors = [
  { name = "Ofek Lev", email = "oss@ofek.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
]
dynamic = ["version"]

[project.urls]
Funding = "https://github.com/sponsors/ofek"
History = "https://github.com/ofek/userpath/blob/master/HISTORY.rst"
Issues = "https://github.com/ofek/userpath/issues"
Source = "https://github.com/ofek/userpath"

[project.scripts]
userpath = "userpath.cli:userpath"

[tool.hatch.version]
path = "userpath/__init__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]
